???? 0.9.8

    user visible changes, client:
    * Made progress messages more suitable for display in Central.
    * Improved help texts.
    * New help topic 'defaults' will display default variables and their values.
    * Copy instructions are performed from top folder down.

    user visible changes, admin:
    Added variables PUBLIC_KEY_FILE, PRIVATE_KEY_FILE to defaults file InstlAdmin.yaml.

    programmer visible changes:
    * Copy now sorts the install_items_by_target_folder list.

4/5/2014 0.9.7   Shai Shasag <shai@waves.com>

    user visible changes, client:
    * display if checksum fails for a file, output expected and found checksums.

    user visible changes, admin:
    * Fixed a problem where softlinks would be followed during wtar.
    * Added progress report to fix-symlinks
    * Added progress report to stage2svn
    * Command up-repo-rev: added the option to up load only the repo rev file with the number at it's tail, not the official one. The option in called --just-with-number.
    * Command up2s3: Now uploads the numbers repo-rev file using the new option --just-with-num of command up-repo-rev.
    * Command file-props:
          - The command did not actually work until now, just printed what should have been done - now it works.
          - file svn-proplist-for-fix-props.txt is created for reference.

29/4/2014 0.9.6   Shai Shasag <shai@waves.com>


    user visible changes, client:
    * new initial vars defined in main: __USRER_ID__, __GROUP_ID__ record the user and group when instl was called. Useful for usaing in the produced script, when called as sudo, to set permissions to the original owner.
    * New variable from main.yaml: MKDIR_CMD to be able to call from index and mkdir command defined by instl. In this case on Mac MKDIR_CMD expands to mkdir_with_owner.
    * Copy now calls mkdir_with_owner on Mac so to properly set owner and permissions for created folders.